--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900"
       rel="stylesheet"
     />
-
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
+    <script
+      src="https://kit.fontawesome.com/871fac047d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -26,19 +24,31 @@
         <h1><a href="index.html" class="logo">EGAT</a></h1>
         <ul class="list-unstyled components mb-5">
           <li class="active">
-            <a href="#"><span class="fa fa-home"></span> Home</a>
+            <a href="#"><span class="fa fa-calendar"></span> ประจำวัน</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-user"></span> About</a>
+            <a href="#"><span class="fa fa-money"></span> Bill Payment</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-sticky-note"></span> Blog</a>
+            <a href="#"
+              ><span class="fa-solid fa-building-columns"></span>
+              รายการธนาคาร</a
+            >
           </li>
           <li>
-            <a href="#"><span class="fa fa-cogs"></span> Services</a>
+            <a href="#"><span class="fa fa-money-check"></span> รายการเช็ค</a>
           </li>
           <li>
-            <a href="#"><span class="fa fa-paper-plane"></span> Contacts</a>
+            <a href="#"><span class="fa fa-ban"></span> ยกเลิก</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-hourglass-end"></span> ปิดงาน</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-print"></span> งานพิมพ์</a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-signal"></span> ค่าคงที่</a>
           </li>
         </ul>
 
@@ -48,9 +58,6 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
-            All rights reserved | This template is made with
-            <i class="icon-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
           </p>
         </div>
       </nav>
@@ -74,44 +81,40 @@
             >
               <i class="fa fa-bars"></i>
             </button>
-
+            <ul class="nav navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">New</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Open</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Save</a>
+              </li>
+            </ul>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#">Report</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Password</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="#">Apps</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#">Logoff</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
 
-        <h2 class="mb-4">Sidebar #07</h2>
+        <h2 class="mb-4">ระบบการเงิน</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          แบบฟอร์มให้กรอกข้อมูล แบบฟอร์มให้กรอกข้อมูล แบบฟอร์มให้กรอกข้อมูล
+          แบบฟอร์มให้กรอกข้อมูล
         </p>
       </div>
     </div>
