--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sidebar 07</title>
+    <title>egat</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -17,8 +17,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="script/script.html" />
-    <link rel="stylesheet" href="script/script.js" />
   </head>
   <body>
     <div class="wrapper d-flex align-items-stretch">
@@ -26,14 +24,7 @@
         <h1><a href="index.html" class="logo">EGAT</a></h1>
         <ul class="list-unstyled components mb-5">
           <li class="active">
-            <a
-              id="button"
-              data-toggle="collapse"
-              href="#collapseExample"
-              role="button"
-              aria-expanded="false"
-              aria-controls="collapseExample"
-            >
+            <a data-toggle="collapse" id="menuCollapse" href="#collapseExample">
               <span class="fa fa-calendar"></span> ประจำวัน</a
             >
             <div
@@ -169,6 +160,95 @@
   aria-hidden="true"
 >
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">หน้า Apps</div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Application</h5>
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+
+        <div class="col-lg-2 col-sm-2 col-md-2">
+          <a href="#">
+            <center>
+              <img
+                src="images/twitter.png"
+                alt="twitter"
+                height="90"
+                width="90"
+              />
+              Twitter
+            </center></a
+          >
+        </div>
+      </div>
+    </div>
   </div>
 </div>
