--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
           <a href="#">
             <center>
               <img
-                src="images/twitter.png"
-                alt="twitter"
+                src="images/mbshr.jpg"
+                alt="mbshr"
                 height="90"
                 width="90"
               />
@@ -267,8 +267,8 @@
             <a href="#">
               <center>
                 <img
-                  src="images/twitter.png"
-                  alt="twitter"
+                  src="images/deposit.jpg"
+                  alt="deposit"
                   height="90"
                   width="90"
                 />
@@ -282,8 +282,8 @@
             <a href="#">
               <center>
                 <img
-                  src="images/twitter.png"
-                  alt="twitter"
+                  src="images/loan.jpg"
+                  alt="loan"
                   height="90"
                   width="90"
                 />
@@ -293,11 +293,11 @@
           </div>
 
             <div class="col-lg-2 col-sm-2 col-md-2">
-              <a href="finance.html">
+              <a href="#">
                 <center>
                   <img
-                    src="images/twitter.png"
-                    alt="twitter"
+                    src="images/finance.jpg"
+                    alt="finance"
                     height="90"
                     width="90"
                   />
@@ -310,8 +310,8 @@
               <a href="#">
                 <center>
                   <img
-                    src="images/twitter.png"
-                    alt="twitter"
+                    src="images/keeping.jpg"
+                    alt="keeping"
                     height="90"
                     width="90"
                   />
@@ -324,8 +324,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/account.jpg"
+                      alt="account"
                       height="90"
                       width="90"
                     />
@@ -338,8 +338,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/divavg.jpg"
+                      alt="divavg"
                       height="90"
                       width="90"
                     />
@@ -352,8 +352,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/insurance.jpg"
+                      alt="insurance"
                       height="90"
                       width="90"
                     />
@@ -366,8 +366,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/assist.jpg"
+                      alt="assist"
                       height="90"
                       width="90"
                     />
@@ -380,8 +380,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/ixp.jpg"
+                      alt="ixp"
                       height="90"
                       width="90"
                     />
@@ -394,8 +394,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/rdc.jpg"
+                      alt="rdc"
                       height="90"
                       width="90"
                     />
@@ -408,8 +408,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/dur.jpg"
+                      alt="dur"
                       height="90"
                       width="90"
                     />
@@ -422,8 +422,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/fom.jpg"
+                      alt="fom"
                       height="90"
                       width="90"
                     />
@@ -436,8 +436,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/atm.jpg"
+                      alt="atm"
                       height="90"
                       width="90"
                     />
@@ -450,8 +450,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/mis.jpg"
+                      alt="mis"
                       height="90"
                       width="90"
                     />
@@ -464,8 +464,8 @@
                 <a href="#">
                   <center>
                     <img
-                      src="images/twitter.png"
-                      alt="twitter"
+                      src="images/admin.jpg"
+                      alt="admin"
                       height="90"
                       width="90"
                     />
